@@ -1087,23 +1087,6 @@ Description: interface between Python and the LibreOffice Access2Base library
  This package contains an interface between Python (user) scripts
  and Access2Base.
 
-Package: libunoil-java
-Section: oldlibs
-Depends: libridl-java, ${java:Depends}, ${misc:Depends}
-Architecture: all
-Replaces: libreoffice-java-common (<< 1:6.4.0~rc1-6)
-Breaks: libreoffice-java-common (<< 1:6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- UNO interface library (compatibility library)
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package formerly contained the precompiled Java interfaces of
- the LibreOffice API.
- .
- This has now been merged into liblibreoffice-java but this package still
- exists for compatibility with applications referencing the old
- library.
-
 Package: libreoffice-officebean
 Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
 Section: oldlibs
@@ -4661,11 +4644,7 @@ Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreeb
 Depends: uno-libs-private (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Recommends: libjuh-java,
-            libjurt-java,
-            liblibreoffice-java,
-            libridl-java,
-            libunoloader-java
+Recommends: liblibreoffice-java
 Suggests: ${java-runtime-depends}
 Replaces: libjuh-java (<< 1:6.4.0~rc1-6),
           libjurt-java (<< 1:6.4.0~rc1-6),
@@ -4699,7 +4678,7 @@ Depends: liblibreoffice-java,
          ${java:Depends},
          ${misc:Depends},
          ${shlibs:Depends}
-Recommends: libjuh-java, libjurt-java, libridl-java, ${java-runtime-depends}
+Recommends: ${java-runtime-depends}
 Replaces: ure (<< 1:7.1.0~)
 Breaks: ure (<< 1:7.1.0~)
 Description: LibreOffice UNO runtime environment -- Java support
@@ -4714,37 +4693,6 @@ Description: LibreOffice UNO runtime environment -- Java support
  .
  This package contains the Java support in the URE.
 
-Package: libjuh-java
-Architecture: all
-Section: oldlibs
-Depends: liblibreoffice-java, ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno helper (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formerly contained various tools and adapters for Java Uno.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
-Package: libridl-java
-Architecture: all
-Section: oldlibs
-Depends: liblibreoffice-java, ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno runtime and base types and types access library (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formely contained the implementation of the base types for the
- Java Uno typesystem, as well as a types access library.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
 Package: libunoloader-java
 Architecture: all
 Section: java
@@ -4757,26 +4705,19 @@ Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  .
  This package contains a UNO loader library for Java.
 
-Package: libjurt-java
-Architecture: all
-Section: oldlibs
-Depends: liblibreoffice-java, ${java:Depends}, ${misc:Depends}
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno Runtime (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formerly contained the "Java Uno Runtime" and basically
- implements Java Uno.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
 Package: liblibreoffice-java
 Architecture: all
 Section: java
 Depends: libunoloader-java, ure, ${java:Depends}, ${misc:Depends}
+Provides: libjuh-java, libjurt-java, libridl-java, libunoil-java
+Replaces: libjuh-java (<< 1:7.1.0~),
+          libjurt-java (<< 1:7.1.0~),
+          libridl-java (<< 1:7.1.0~),
+          libunoil-java (<< 1:7.1.0~)
+Breaks: libjuh-java (<< 1:7.1.0~),
+        libjurt-java (<< 1:7.1.0~),
+        libridl-java (<< 1:7.1.0~),
+        libunoil-java (<< 1:7.1.0~)
 Description: LibreOffice UNO runtime environment -- Java library
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
