@@ -857,23 +857,6 @@ Description: interface between Python and the LibreOffice Access2Base library
  This package contains an interface between Python (user) scripts
  and Access2Base.
 
-Package: libunoil-java
-Section: oldlibs
-Depends: ${java:Depends}, ${misc:Depends}, libridl-java
-Architecture: all
-Replaces: libreoffice-java-common (<< 1:6.4.0~rc1-6)
-Breaks: libreoffice-java-common (<< 1:6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- UNO interface library (compatibility library)
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package formerly contained the precompiled Java interfaces of
- the LibreOffice API.
- .
- This has now been merged into liblibreoffice-java but this package still
- exists for compatibility with applications referencing the old
- library.
-
 Package: libreoffice-officebean
 Architecture: %OOO_JAVA_ARCHS%
 Section: oldlibs
