@@ -114,7 +114,7 @@ Package: ure
 Section: libs
 Architecture: %OOO_ARCHS%
 Depends: ${misc:Depends}, ${shlibs:Depends}, uno-libs-private (= ${binary:Version})
-Recommends: liblibreoffice-java, libjuh-java, libjurt-java, libridl-java, libunoloader-java
+Recommends: liblibreoffice-java
 Suggests: ${java-runtime-depends}
 Replaces: libreoffice-common (<< 1:4.5.0), libreoffice-core (<< 1:5.3.0~beta1~), libjuh-java (<< 1:6.4.0~rc1-6), libridl-java (<< 1:6.4.0~rc1-6), libunoloader-java (<< 1:6.4.0~rc1-6), libjurt-java (<< 1:6.4.0~rc1-6)
 Breaks: libreoffice-core (<< 1:5.3.0~beta1~), libreoffice-common (<< 1:4.5.0), libjuh-java (<< 1:6.4.0~rc1-6), libridl-java (<< 1:6.4.0~rc1-6), libunoloader-java (<< 1:6.4.0~rc1-6), libjurt-java (<< 1:6.4.0~rc1-6)
@@ -132,7 +132,7 @@ Package: ure-java
 Section: java
 Architecture: %OOO_ARCHS%
 Depends: ${misc:Depends}, ${shlibs:Depends}, ${java:Depends}, uno-libs-private (= ${binary:Version}), ure, liblibreoffice-java, libunoloader-java
-Recommends: libjuh-java, libjurt-java, libridl-java, ${java-runtime-depends}
+Recommends: ${java-runtime-depends}
 Replaces: ure (<< 1:7.1.0~)
 Breaks: ure (<< 1:7.1.0~)
 Description: LibreOffice UNO runtime environment -- Java support
@@ -147,37 +147,6 @@ Description: LibreOffice UNO runtime environment -- Java support
  .
  This package contains the Java support in the URE.
 
-Package: libjuh-java
-Architecture: all
-Section: oldlibs
-Depends: ${java:Depends}, ${misc:Depends}, liblibreoffice-java
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno helper (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formerly contained various tools and adapters for Java Uno.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
-Package: libridl-java
-Architecture: all
-Section: oldlibs
-Depends: ${java:Depends}, ${misc:Depends}, liblibreoffice-java
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno runtime and base types and types access library (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formely contained the implementation of the base types for the
- Java Uno typesystem, as well as a types access library.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
 Package: libunoloader-java
 Architecture: all
 Section: java
@@ -190,26 +159,13 @@ Description: LibreOffice UNO runtime environment -- (Java) UNO loader
  .
  This package contains a UNO loader library for Java.
 
-Package: libjurt-java
-Architecture: all
-Section: oldlibs
-Depends: ${java:Depends}, ${misc:Depends}, liblibreoffice-java
-Replaces: ure (<< 6.4.0~rc1-6)
-Breaks: ure (<< 6.4.0~rc1-6)
-Description: LibreOffice UNO runtime environment -- Java Uno Runtime (compatibility library)
- The Uno Runtime Environment (URE) is the well-known UNO component model
- of LibreOffice, packaged up as an individual product.
- .
- This package formerly contained the "Java Uno Runtime" and basically
- implements Java Uno.
- .
- This has now been merged into liblibreoffice-java but this package still exists
- for compatibility with applications referencing the old library.
-
 Package: liblibreoffice-java
 Architecture: all
 Section: java
 Depends: ure, libunoloader-java, ${java:Depends}, ${misc:Depends}
+Provides: libjuh-java, libridl-java, libjurt-java, libunoil-java
+Replaces: libjuh-java (<< 1:7.1.0~), libridl-java (<< 1:7.1.0~), libjurt-java (<< 1:7.1.0~), libunoil-java (<< 1:7.1.0~)
+Breaks: libjuh-java (<< 1:7.1.0~), libridl-java (<< 1:7.1.0~), libjurt-java (<< 1:7.1.0~), libunoil-java (<< 1:7.1.0~)
 Description: LibreOffice UNO runtime environment -- Java library
  The Uno Runtime Environment (URE) is the well-known UNO component model
  of LibreOffice, packaged up as an individual product.
