@@ -966,7 +966,7 @@ export JAVA_HOME
 	BUILD_DEPS += , javahelper $(JAVAHELPER_MIN_VERSION) <!nojava>
 else
 	CONFIGURE_FLAGS += --without-java
-	DEBHELPER_OPTIONS += -Nlibreoffice-officebean -Nlibofficebean-java -Nlibreoffice-java-common -Nlibreoffice-script-provider-bsh -Nlibreoffice-script-provider-js -Nlibreoffice-subsequentcheckbase -Nlibunoil-java -Nlibofficebean-java -Nlibjuh-java -Nlibridl-java -Nlibunoloader-java -Nlibjurt-java -Nliblibreoffice-java -Nlibreoffice-sdbc-hsqldb
+	DEBHELPER_OPTIONS += -Nlibreoffice-officebean -Nlibofficebean-java -Nlibreoffice-java-common -Nlibreoffice-script-provider-bsh -Nlibreoffice-script-provider-js -Nlibreoffice-subsequentcheckbase -Nlibofficebean-java -Nlibunoloader-java -Nliblibreoffice-java -Nlibreoffice-sdbc-hsqldb
 endif
 
 ifeq "$(ENABLE_JAVA)" "y"
@@ -3319,13 +3319,13 @@ ifeq "$(ENABLE_JAVA)" "y"
 	sed -e s/@version@/$(shell echo $(DEB_VERSION_UPSTREAM) | cut -d~ -f1)/ \
 		< $(SOURCE_TREE)/unoil/pom.unoil.xml > debian/pom.unoil.xml
 	for i in juh jurt unoil ridl unoloader libreoffice; do \
-		mh_installpoms -plib$$i-java; \
-		mh_installjar -plib$$i-java -l debian/pom.$$i.xml instdir/program/classes/$$i.jar; \
+		mh_installpoms -pliblibreoffice-java; \
+		mh_installjar -pliblibreoffice-java -l debian/pom.$$i.xml instdir/program/classes/$$i.jar; \
 	done
 	# create symlinks where LO expects them
 	for i in juh jurt unoil ridl unoloader libreoffice; do \
-		mkdir -p $(CURDIR)/debian/lib$$i-java/$(OODIR)/program/classes; \
-		cd $(CURDIR)/debian/lib$$i-java/$(OODIR)/program/classes; \
+		mkdir -p $(CURDIR)/debian/liblibreoffice-java/$(OODIR)/program/classes; \
+		cd $(CURDIR)/debian/liblibreoffice-java/$(OODIR)/program/classes; \
 		ln -s /usr/share/java/$$i.jar $$i.jar; \
 	done
 
