@@ -10,6 +10,8 @@ libreoffice (1:7.1.0~alpha1~git20200802-1) UNRELEASED; urgency=medium
       can depend on that. (For possible future archs starting with
       no-java where this then isn't fullfillable instead of silently "working"
       without actual Java stuff in "ure")
+    - stop building libjuh-java, libridl-java, libjurt-java and libunoil-java.
+      Merge them (and provide them) in(to) liblibreoffice-java.
 
  -- Rene Engelhard <rene@debian.org>  Thu, 21 May 2020 13:43:43 +0200
 
